# camrec

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
camrec/: asgi.py  settings.py  urls.py  wsgi.py
recorder/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recorder/management/commands/: rec_service.py
recorder/templatetags/: fallback_jazzmin.py
templates/admin/: actions.html
templates/recorder/: archive_form.html  system_monitor.html
